syntax = "proto3";
package pb;

option go_package = "payment-service/pb";

import "payment.proto";

message GetAllPaymentResponse {
  repeated Payment payments = 1;
}

message GetAllEmpty {}